Loaded file and dataset

--- a/Pet_Box.ipynb
+++ b/Pet_Box.ipynb
@@ -15,6 +15,257 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"Dataset\\pet_supplies_2212.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>category</th>\n",
+       "      <th>animal</th>\n",
+       "      <th>size</th>\n",
+       "      <th>price</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>repeat_purchase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>Bird</td>\n",
+       "      <td>large</td>\n",
+       "      <td>51.1</td>\n",
+       "      <td>1860.62</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Housing</td>\n",
+       "      <td>Bird</td>\n",
+       "      <td>MEDIUM</td>\n",
+       "      <td>35.98</td>\n",
+       "      <td>963.60</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>31.23</td>\n",
+       "      <td>898.30</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Medicine</td>\n",
+       "      <td>Cat</td>\n",
+       "      <td>small</td>\n",
+       "      <td>24.95</td>\n",
+       "      <td>982.15</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Housing</td>\n",
+       "      <td>Cat</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>26.18</td>\n",
+       "      <td>832.63</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   product_id  category animal    size  price    sales  rating  \\\n",
+       "0           1      Food   Bird   large   51.1  1860.62     7.0   \n",
+       "1           2   Housing   Bird  MEDIUM  35.98   963.60     6.0   \n",
+       "2           3      Food    Dog  medium  31.23   898.30     5.0   \n",
+       "3           4  Medicine    Cat   small  24.95   982.15     6.0   \n",
+       "4           5   Housing    Cat   Small  26.18   832.63     7.0   \n",
+       "\n",
+       "   repeat_purchase  \n",
+       "0                1  \n",
+       "1                0  \n",
+       "2                1  \n",
+       "3                1  \n",
+       "4                1  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>category</th>\n",
+       "      <th>animal</th>\n",
+       "      <th>size</th>\n",
+       "      <th>price</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>repeat_purchase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1495</th>\n",
+       "      <td>1496</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>Bird</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>40.91</td>\n",
+       "      <td>1203.36</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1496</th>\n",
+       "      <td>1497</td>\n",
+       "      <td>Equipment</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>small</td>\n",
+       "      <td>32.89</td>\n",
+       "      <td>1099.97</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1497</th>\n",
+       "      <td>1498</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>Fish</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>25.79</td>\n",
+       "      <td>724.02</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1498</th>\n",
+       "      <td>1499</td>\n",
+       "      <td>Medicine</td>\n",
+       "      <td>Fish</td>\n",
+       "      <td>small</td>\n",
+       "      <td>19.94</td>\n",
+       "      <td>658.66</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1499</th>\n",
+       "      <td>1500</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>Cat</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>25.95</td>\n",
+       "      <td>826.08</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      product_id   category animal    size  price    sales  rating  \\\n",
+       "1495        1496       Food   Bird  medium  40.91  1203.36     5.0   \n",
+       "1496        1497  Equipment    Dog   small  32.89  1099.97     5.0   \n",
+       "1497        1498       Food   Fish   Small  25.79   724.02     3.0   \n",
+       "1498        1499   Medicine   Fish   small  19.94   658.66     5.0   \n",
+       "1499        1500       Food    Cat  Medium  25.95   826.08     4.0   \n",
+       "\n",
+       "      repeat_purchase  \n",
+       "1495                0  \n",
+       "1496                0  \n",
+       "1497                0  \n",
+       "1498                1  \n",
+       "1499                1  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
