--- a/Pet_Box.ipynb
+++ b/Pet_Box.ipynb
@@ -1842,7 +1842,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RECOMMENDATION : \n"
+    "**Insights:**\n",
+    "- The Housing and Accessory category had a low rating, which is why sales were affected.\"\n",
+    "- The total sales for Cat Equipment were 238,623. Toys for Cat had total sales of 145,269, and Dog Food had total sales of 107,602.\"\n",
+    "- Large and medium-sized animals were not in as much demand as small-sized ones.\"\n",
+    "- The ratings for Food and Equipment are slightly strong, but there is room for improvement. \n"
    ]
   }
  ],
