--- a/Pet_Box.ipynb
+++ b/Pet_Box.ipynb
@@ -1904,7 +1904,7 @@
    "source": [
     "- Results from the analysis suggest that customers are more likely to make repeat purchases for equipment and toys, possibly due to their durability and usefulness. By focusing on promoting these categories and improving customer satisfaction, we can potentially increase our sales and improve customer loyalty.\n",
     "- Considering these ratings in category, focus on promoting toys and medicine, as they have received positive feedback from customers. This can include targeted marketing campaigns, offering discounts or special promotions on these products, and ensuring their availability and quality. It is critical to address the low rating in the housing category by identifying and correcting any issues that may have contributed to consumer discontent. Customer surveys and feedback sessions can provide useful insights into areas for improvement. The company can improve the housing category's rating and increase customer happiness by upgrading its products and addressing customer issues.\n",
-    "Overall, the company can improve consumer satisfaction by leveraging the favorable ratings of toys and medicine and actively addressing housing-related problems.\n"
+    "- Overall, the company can improve consumer satisfaction by leveraging the favorable ratings of toys and medicine and actively addressing housing-related problems.\n"
    ]
   }
  ],
