--- a/Pet_Box.ipynb
+++ b/Pet_Box.ipynb
@@ -968,9 +968,13 @@
    "source": [
     " **Observations** \n",
     " - product_id: Ranges from 1 to 1500, which matches our dataset size, indicating unique product identifiers.\n",
-    " - price: The average price of the products is approximately $29. Prices range from $12 to $54.\n",
-    " - sales: The average sales value is around $996, with a minimum value of $286 and a maximum value of $2255.\n",
+    "\n",
+    " - price: The average price of the products is approximately 29. Prices range from 12 to 54.\n",
+    "\n",
+    " - sales: The average sales value is around 996, with a minimum value of 286 and a maximum value of 2255.\n",
+    "\n",
     " - rating: Product ratings range from 1 to 9, with an average rating of approximately 4.\n",
+    "\n",
     " - repeat_purchase: This is a binary column with values of either 0 (not a repeat purchase) or 1 (repeat purchase). ."
    ]
   },
