--- a/Pet_Box.ipynb
+++ b/Pet_Box.ipynb
@@ -33,6 +33,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**The dataset provides the following columns:**\n",
+    "\n",
+    "- product_id: An identifier for each product.\n",
+    "- category: The category of the product (e.g., Food, Housing, Medicine).\n",
+    "- animal: The type of animal for which the product is intended (e.g., Bird, Dog, Cat).\n",
+    "- size: The size of the product (e.g., large, medium, small).\n",
+    "- price: The price of the product.\n",
+    "- sales: The total sales for the product.\n",
+    "- rating: The rating given to the product.\n",
+    "- repeat_purchase: A binary value indicating whether the product is a repeat purchase (1 for Yes, 0 for No)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data Exploration and Cleaning"
    ]
   },
